apply plugin: 'maven-publish'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

description = 'Library for authentication and authorization of JWT tokens issued by the RADAR platform'

dependencies {
    api group: 'com.auth0', name: 'java-jwt', version: oauth_jwt_version
    api group: 'com.squareup.okhttp3', name: 'okhttp', version: okhttp_version

    implementation group: 'org.slf4j', name: 'slf4j-api', version: slf4j_version
    implementation(platform("com.fasterxml.jackson:jackson-bom:$jackson_version"))
    implementation group: 'com.fasterxml.jackson.core' , name: 'jackson-databind'
    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junit_version
    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.27.2'
    testImplementation group: 'com.github.stefanbirkner', name: 'system-rules', version: '1.19.0'

    testRuntimeOnly group: 'ch.qos.logback', name: 'logback-classic', version: logback_version
    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junit_version

}

test {
    testLogging {
        exceptionFormat = 'full'
    }
    useJUnitPlatform()
}

task ghPagesJavadoc(type: Copy, dependsOn: javadoc) {
    from javadoc.destinationDir
    into file("$rootDir/public/radar-auth-javadoc")
}

ext.projectLanguage = "java"

apply from: "$rootDir/gradle/style.gradle"
apply from: "$rootDir/gradle/publishing.gradle"
